--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_nav_bar: ^5.0.6
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +61,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+     - lib/images/black.jpg
+     - lib/images/blue.jpg
+     - lib/images/brown.jpg
+     - lib/images/unicorn.jpg
      - lib/images/5.png
    #- images/a_dot_ham.jpeg
 
